# Solar-intelligence

./:  .gitignore  .dockerignore  .env.example  .gitignore  ANIZA_Policy_Agent_TBA.py  BI_Market_Data.xlsx  CLEANUP_COMPLETED.md  CLEANUP_RECOMMENDATIONS.md  CODE_CLEANUP_COMPLETED.md  DATABASE_SETUP.md  Dockerfile  INTEGRATION_STATUS.md  Italy_market_plot.json  LICENSE  Market_Database_FY_Final.csv  PLOTTING_AGENT_MODEL_CHANGE.md  PV Manufacturer_analysis.py  README_ENHANCED.md  REMOVE_MATPLOTLIB_PLOTS.md  app.py  app_config_bridge.py  digitalization_agent.ts  digitalization_trend_agent.py  docker-compose.yml  env.example  example_512mb_config.py  gunicorn.conf.py  leo_om_agent.py  longer_market_agent_flow.py  manufacturer_financial_agent.py  market_intelligence_agent.py  market_intelligence_agent.py.backup  memory_monitor.py  models.py  module_prices_agent.py  news_agent.py  nzia_market_impact_agent.py  nzia_policy_agent.py  package.json  ppt_gen.py  (+27 more)
.claude/: settings.local.json
app/: README.md  __init__.py  extensions.py
deployment/: DATABASE_SCHEMA_OVERVIEW.md
docs/: AGENT_ACCESS_CONTROL.md  AGENT_COMPARISON.md  API_ENDPOINTS_VERIFIED.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_IMPROVEMENTS.md  ARTIFACT_LAYOUT_ANALYSIS.md  BUGFIX_ANIMATE_CHART_ENTRY_MISSING.md  BUGFIX_API_ENDPOINTS.md  BUGFIX_CHART_RENDERING_MISSING.md  BUGFIX_CLASSIFICATION_AGENT_CONTEXT.md  BUGFIX_CONVERSATION_HISTORY_SYNC_ISSUE.md  BUGFIX_MESSAGE_DUPLICATION_MARKET_AGENT.md  BUGFIX_PLOT_HANDLER.md  BUGFIX_PLOT_QUERIES_MISSING_FROM_HISTORY.md  BUGFIX_PREVENT_DUPLICATE_SUBMISSIONS.md  README.md  (+34 more)
(+143 files in other folders)
