[tool.poetry]
name = "weaviate-datahub"
version = "0.1.0"
description = ""
authors = ["Mousa Becquerel <m.sondoqah@becquerelinstitute.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandasai = ">=3.0.0b2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
